[project]
name = "kelabpetani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.43",
    "authlib>=1.6.4",
    "python-dotenv>=1.1.1",
]
